{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "b4219b08-f5f7-4cd6-802e-444f528d50f6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7e3ba207-cf1b-4ffa-88b9-d503b167cfc6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "2865d815-8036-40a8-ad54-890b98370474",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "6aaac48c-8fbd-4b6e-92ad-10d46c3a96f2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "23209c48-13bc-4a06-b302-6f9b103824e9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8ad23210-12b9-44fd-8b63-8bb3aaa5121b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac929268-6cdb-433a-b289-cd8d8f428129",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f359efcc-82e1-47b0-94d3-577bf6e0c804",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "1b273669-e71a-4960-a687-d8caa0b8ed39",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "674f9670-1597-43cb-88b7-665722b40ea8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3170a75f-d8a5-46c5-9db5-b7fc6769a220",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "62fe8877-ac97-4851-ada5-b7068ce7aee0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b24ff890-4419-4a0b-a211-386a046682dc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a1f3f609-a865-484d-ae7c-8020fa1ba0f9",
                    "path": "<SwitchProControllerHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1b64e66-504d-4190-83f9-fe3e91736edd",
                    "path": "<SwitchProControllerHID>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "d3d58e4a-868b-42ca-a5ec-01e9bfb7ea96",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "ccb29c02-b341-4853-b145-05ca4eb2ef16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "88f6fdfc-c8ee-43a6-aab7-b23db3feb0fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ce96514-21f2-4384-aab3-7aaf83cbaa9b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f02b610a-e561-4c11-b996-e2738886f344",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d1d43c7-c8e2-4f0f-b51f-0f6be5354852",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "981aff9c-2641-4016-80c8-4264b6b95c1d",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "409589f8-8612-4b48-a9a0-212fd6a97809",
            "actions": [
                {
                    "name": "Keybord",
                    "type": "Value",
                    "id": "de12b33c-eb54-47a3-b700-ccde864544ee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "a48f0b3f-c762-4723-8152-5836b1ffdf02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "477f44cf-1b6f-43c6-9deb-7468d92cce86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HotBar",
                    "type": "Button",
                    "id": "84486b57-0086-4ba6-a69f-07324b69a15c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCraft",
                    "type": "Button",
                    "id": "031ec966-4573-4ae6-8eac-eebaba74d372",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ee6cfbf-ca72-42fe-9ed9-1e8bca3ec82a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49023d7a-8747-4bd1-97cc-0e7abddf35d6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b141440-cd28-4543-a188-97bfd0063a05",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40823cd2-24a7-4d77-bc1a-2bb58d8d1bb5",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "031ee0d8-8db7-45e1-a41a-8d192df900bd",
                    "path": "<SwitchProControllerHID>/dpad/left",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6855f39-d504-43f8-95c1-56401103f982",
                    "path": "<SwitchProControllerHID>/dpad/up",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0944b61-b992-46ea-b4f4-67d0cd537af5",
                    "path": "<SwitchProControllerHID>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2ba100d-5cf2-4c25-a297-442a4b196849",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keybord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2aadf3f-357a-48a0-8fc6-f2b6de9cd856",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b125539-4a49-48d8-a5a3-a585d734ef21",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fddc0095-f965-49fe-8f40-924963894b01",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b79b793e-5e48-4b3a-9ba5-ac0474ec1243",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b084c9cb-87fb-4896-b464-31da1588d64a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotBar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cee312c-f12b-4ce8-b237-aa94e5a6cae9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotBar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b724ea3-ecef-435f-bb33-ea23a9dbf2c0",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCraft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca8d4d97-1b2b-4dd6-afc9-23e73c7c7e5f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCraft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "b7bad282-b5af-4e2c-ba5f-67009b1f956f",
            "actions": [
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "63a8b044-c62d-44fe-bbea-a24409e29071",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7988ff51-4e8d-475d-830d-11f44e574fc9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96a1e209-19b6-4957-a69b-f1549d4910be",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Submit",
            "id": "908f1e8f-2c81-4f38-a177-3e8a0b0a7261",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "6c856514-4edf-4d79-b9c5-8da21c048dcb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a1a10c8-62f2-452f-bf76-a7ce34057a97",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35563091-73c7-4593-acdd-b0b6d8f90032",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77204fe2-ab4e-400d-a0ef-ef28a33c8304",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interactable",
            "id": "8956f634-8411-45fc-be7b-a54e8443faa0",
            "actions": [
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "fa0f1d45-2b0b-4815-acbd-6d9687a7b6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d18e223f-fb1a-4838-b2d2-0e5492e45527",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}